Removed safe_exit.c and moved err_exit() to parsing utils, fixed a parsing issue when philo_num is <= 0

--- a/philo/Makefile
+++ b/philo/Makefile
@@ -9,8 +9,7 @@ SRCS =	srcs/main.c \
 		srcs/simulation.c \
 		srcs/simulation_utils.c \
 		srcs/routines.c \
-		srcs/getters_setters.c \
-		srcs/safe_exit.c
+		srcs/getters_setters.c
 
 OBJS = $(SRCS:.c=.o)
 
